reduce lyric padding-left to 2.5em to avoid right clipping

--- a/app/src/styles/LyricWidget.css
+++ b/app/src/styles/LyricWidget.css
@@ -27,7 +27,7 @@
   line-height: 2.2;
   white-space: nowrap;
   overflow: hidden;
-  padding-left: 4em;
+  padding-left: 2.5em;
   font-size: 12px;
 }
 
